[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-rent-signals"
version = "1.0.0"
description = "Dagster orchestration for Tampa Rent Signals data pipeline"
authors = [
    {name = "Tampa Rent Signals Team"}
]
dependencies = [
    "dagster[webserver,postgres]>=1.5.0",
    "dagster-dbt>=0.21.0",
    "dagster-snowflake>=0.21.0",
    "dagster-great-expectations>=0.1.0",
    "dbt-core>=1.6.0",
    "dbt-snowflake>=1.6.0",
    "great-expectations[snowflake]>=0.17.0",
    "pandas>=1.5.0",
    "sqlalchemy-snowflake>=1.4.7",
    "snowflake-connector-python>=3.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dagster_rent_signals*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true